--- a/src/app/component/shopping-cart/product-list/product-item/product-item.component.html
+++ b/src/app/component/shopping-cart/product-list/product-item/product-item.component.html
@@ -1,16 +1,14 @@
 <div class="card mb-4 shadow-sm">
-  <img class="bd-placeholder-img card-img-top" width="100%" height="225"
-    src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTYResK0Mlr5CJoFB_ZSMOvE4FHHUlrQ6EF7fxJTgBx2NeZavl-Ln8YExkKcA&usqp=CAc" />
-
+  <img class="bd-placeholder-img card-img-top" width="100%" height="225" [src]="productItem.imageUrl" />
   <div class="card-body">
     <p class="card-text">
-      <strong>{{49.99|currency}}</strong>
+      <strong>{{productItem.price |currency}}</strong>
     </p>
-    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.
-      This content is a little bit longer.</p>
+    <p class="card-text">{{ productItem.descripation }}</p>
     <div class="d-flex justify-content-between align-items-center">
       <div class="btn-group">
-        <button type="button" class="btn btn-sm btn-primary product-btn">Add to Cart</button>
+        <button type="button" class="btn btn-sm btn-primary product-btn" (click)="handleAddToCart()">Add to
+          Cart</button>
         <button type="button" class="btn btn-sm btn-secondary product-btn">View Details</button>
       </div>
     </div>
